// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Correctly rendered default button NavigationButton with 2 props renders correctly 1`] = `
<View
  accessible={true}
  collapsable={false}
  focusable={true}
  nativeID="animatedComponent"
  onClick={[Function]}
  onResponderGrant={[Function]}
  onResponderMove={[Function]}
  onResponderRelease={[Function]}
  onResponderTerminate={[Function]}
  onResponderTerminationRequest={[Function]}
  onStartShouldSetResponder={[Function]}
  style={
    Object {
      "backgroundColor": "#515ee9",
      "minWidth": 100,
      "opacity": 1,
      "paddingHorizontal": 10,
      "paddingVertical": 6,
    }
  }
>
  <Text
    style={
      Object {
        "color": "#fff",
        "textAlign": "center",
      }
    }
  >
    bttn
  </Text>
</View>
`;

exports[`Correctly rendered default button NavigationButton with 4 props renders correctly 1`] = `
<View
  accessible={true}
  collapsable={false}
  focusable={true}
  nativeID="animatedComponent"
  onClick={[Function]}
  onResponderGrant={[Function]}
  onResponderMove={[Function]}
  onResponderRelease={[Function]}
  onResponderTerminate={[Function]}
  onResponderTerminationRequest={[Function]}
  onStartShouldSetResponder={[Function]}
  style={
    Object {
      "backgroundColor": "#000",
      "opacity": 1,
    }
  }
>
  <Text
    style={
      Object {
        "color": "#000",
      }
    }
  >
    bttn
  </Text>
</View>
`;
